--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,13 @@
     "background": {
         "service_worker": "background.js",
         "type": "module"
-    }
+    },
+    "action": { },
+    "permissions": [
+        "scripting"
+    ],
+    "host_permissions": [
+        "https://*/*",
+        "httpss://*/*"
+    ]
 }
-
-}}
