--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,17 @@
         "32": "icon32.png"
     },
     "background": {
-        "service_worker": "background.js",
+        "service_worker": "service-worker.js",
         "type": "module"
+    },
+    "action": { 
+        "default_popup": "index.html"
     },
     "permissions": [
         "scripting"
     ],
     "host_permissions": [
-        "https://*/*",
+        "http://*/*",
         "https://*/*"
     ]
 }
